# system-switch-java

./: Makefile  README.md  disabledUnderline.patch  fix-arch-detection.patch  jre-java.patch  new-jdk-paths.patch  system-switch-java.spec  tuiWidth.patch  version-fix.patch
src/: .hg_archival.txt  .hgignore  .hgtags  AUTHORS  COPYING.icon  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  switch_java_boot.py  switch_java_functions.py  switch_java_functions.py.in  switch_java_globals.py  switch_java_globals.py.in  switch_java_gui.py  switch_java_tui.py  system-switch-java  system-switch-java.desktop.in  system-switch-java.glade  system-switch-java.in
src/po/: LINGUAS  Makefile.in  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  kn.po  ko.po  mai.po  ml.po  mr.po  nds.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  (+13 more)
src/security/console.apps/: system-switch-java
