AC_INIT
AM_INIT_AUTOMAKE([system-switch-java], [1.1.4], [dbhole@redhat.com])
AM_PATH_PYTHON
AC_PATH_TOOL([MSGFMT], [msgfmt])
AC_SUBST([MSGFMT])
AC_PATH_TOOL([INTLTOOL_UPDATE], [intltool-update])
AC_SUBST([INTLTOOL_UPDATE])
AC_PATH_TOOL([INTLTOOL_MERGE], [intltool-merge])
AC_SUBST([INTLTOOL_MERGE])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([po/Makefile])
AC_CONFIG_FILES([switch_java_functions.py])
AC_OUTPUT
